# distr-asg2

./: .gitignore  Cargo.toml  README.md  big.txt  build.rs  found peers.txt  ident-keypair.key  ident-keypair2.key  msg_db  msg_db2  node1.txt  node2.txt  poop.txt  tmp.txt  todo.txt
proto/: challenge.proto  message.proto
src/: main.rs
