[package]
name = "asg2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.32"
clap = { version="4.6.0", features=["derive"] }
serde = { version="1.0.228", features=["derive"] }
ed25519-dalek = { version = "2",features = ["rand_core"]}
rand = { version = "0.8", features = ["std"]}
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
prost = "0.14"
rusqlite = { version = "0.39.0", features = ["bundled"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
local-ip-address = "0.6.11"


[dependencies.libp2p]
version = "0.56.0"
features = ["tokio", "noise", "macros", "tcp", "quic", "yamux", "cbor", "request-response", "kad", "gossipsub", "mdns", "rendezvous", "identify"]

[dependencies.uuid]
version = "1.23.0"
features = [
    "v4",
]

[build-dependencies]
prost-build = "0.14"
